--- a/templates/about.html
+++ b/templates/about.html
@@ -26,8 +26,8 @@
         <!-- Image Section: 50% Width -->
         <div class="col-lg-6 col-sm-12">
           <div class="about-img d-flex flex-column align-items-center">
-            <img src="https://smb.ibsrv.net/imageresizer/image/article_manager/1200x1200/19670/519452/heroimage0.384673001643741591.jpg" alt="" class="img-fluid mb-4" />
-            <img src="https://media.allaboutvision.com/cms/caas/v1/media/401080/data/picture/503ebb5235f8d1e7a7be66e88f67a315.jpg" alt="" class="img-fluid" />
+            <img src="static/images/gallery/17.jpg" alt="" class="img-fluid mb-4" />
+            <img src="static/images/gallery/15.jpg" alt="" class="img-fluid" />
           </div>
         </div>
         <!-- Content Section: 50% Width -->
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item mb-5 mb-lg-0">
-            <img src="https://media.istockphoto.com/id/1189362136/photo/eye-doctor-with-female-patient-during-an-examination-in-modern-clinic.jpg?s=612x612&w=0&k=20&c=jubMfA5uM3Boue5TtzGnBjdpZgo7AD8URPvjwh21KTA=" alt="Compassionate and Personalized Care" class="img-fluid w-100" />
+            <img src="static/images/gallery/37 Q.jpg" alt="Compassionate and Personalized Care" class="img-fluid w-100" />
             <h4 class="mt-3">Compassionate and Personalized Care</h4>
             <p>We treat every patient like family, ensuring comfort, education, and informed decision-making for better eye health.</p>
           </div>
@@ -63,12 +63,12 @@
           <div class="about-block-item mb-5 mb-lg-0">
             <h4 class="mt-3">Cutting Edge Technology</h4>
             <p>Equipped with modern diagnostic and surgical tools, enabling precise, safe procedures with faster recovery.</p>
-            <img src="https://www.theretinacentre.com/wp-content/uploads/2021/09/corneal.jpg" alt="Cutting Edge Technology" class="img-fluid w-100" />
+            <img src="static/images/gallery/30 P.jpg" alt="Cutting Edge Technology" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item mb-5 mb-lg-0">
-            <img src="https://hospitalhub.neom.com/images/eye.jpg" alt="Affordable Quality Eye hospital" class="img-fluid w-100" />
+            <img src="static/images/gallery/42 Q.jpg" alt="Affordable Quality Eye hospital" class="img-fluid w-100" />
             <h4 class="mt-3">Affordable Quality Eye Hospital</h4>
             <p>Accredited NABH centers providing high-quality treatment at pocket-friendly prices for all sections of society.</p>
           </div>
@@ -77,7 +77,7 @@
           <div class="about-block-item">
             <h4 class="mt-3">Experienced and Skilled Experts</h4>
             <p>Our dedicated team of specialists ensures superior care with continuous training and expertise.</p>
-            <img src="https://media.istockphoto.com/id/930864180/photo/doctor-and-patient-in-ophthalmology-clinic.jpg?s=612x612&w=0&k=20&c=DKm22bzKnqEjmETFWBtmcfDRaFoyAZAg4p4ywp4Y17M=" alt="Experienced and Skilled Experts" class="img-fluid w-100" />
+            <img src="static/images/gallery/48 Q.jpg" alt="Experienced and Skilled Experts" class="img-fluid w-100" />
           </div>
         </div>
       </div>
@@ -104,13 +104,13 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <div class="about-img">
-            <img src="https://media.istockphoto.com/id/1489731410/photo/digital-vision-eye-care-concept-doctor-using-technology-for-eye-test-vision-checking-eyesight.jpg?s=612x612&w=0&k=20&c=RBVpfwrF1XjNZM6Ur19V7AgdWwM2kiyEE6O5yfGOFN0=" alt="" class="img-fluid" />
-            <img src="https://media.istockphoto.com/id/1189207226/photo/female-patient-checking-vision-in-ophthalmological-clinic.jpg?s=612x612&w=0&k=20&c=jgoUMyIj09OnX6lc5FY3KDcheFDZ9zll6uZTHafmmgk=" alt="" class="img-fluid mt-4" />
+            <img src="static/images/gallery/30 P.jpg" alt="" class="img-fluid" />
+            <img src="static/images/gallery/12.jpg" alt="" class="img-fluid mt-4" />
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
           <div class="about-img mt-4 mt-lg-0">
-            <img src="https://www.preciseeye.in/wp-content/uploads/2023/05/female-doctor-working-her-ophthalmology-clinic_23-2149082457.jpg" alt="" class="img-fluid" />
+            <img src="static/images/gallery/48 Q.jpg" alt="" class="img-fluid" />
           </div>
         </div>
       </div>
@@ -124,13 +124,13 @@
       <div class="row align-items-center">
         <div class="col-lg-4 col-sm-6">
           <div class="about-img">
-            <img src="https://www.preciseeye.in/wp-content/uploads/2023/05/female-doctor-working-her-ophthalmology-clinic_23-2149082457.jpg" alt="" class="img-fluid" />
-            <img src="https://media.istockphoto.com/id/1189207226/photo/female-patient-checking-vision-in-ophthalmological-clinic.jpg?s=612x612&w=0&k=20&c=jgoUMyIj09OnX6lc5FY3KDcheFDZ9zll6uZTHafmmgk=" alt="" class="img-fluid mt-4" />
+            <img src="static/images/gallery/36 Q.jpg" alt="" class="img-fluid" />
+            <img src="static/images/gallery/34 Q.jpg" alt="" class="img-fluid mt-4" />
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
           <div class="about-img mt-4 mt-lg-0">
-            <img src="https://media.istockphoto.com/id/1489731410/photo/digital-vision-eye-care-concept-doctor-using-technology-for-eye-test-vision-checking-eyesight.jpg?s=612x612&w=0&k=20&c=RBVpfwrF1XjNZM6Ur19V7AgdWwM2kiyEE6O5yfGOFN0=" alt="" class="img-fluid" />
+            <img src="static/images/gallery/42 Q.jpg" alt="" class="img-fluid" />
           </div>
         </div>
         <div class="col-lg-4">
@@ -152,7 +152,7 @@
         <!-- Card 1: Care with Compassion -->
         <div class="col-md-4">
           <div class="card border-0 approach-card">
-            <img src="https://media.istockphoto.com/id/1189362136/photo/eye-doctor-with-female-patient-during-an-examination-in-modern-clinic.jpg?s=612x612&w=0&k=20&c=jubMfA5uM3Boue5TtzGnBjdpZgo7AD8URPvjwh21KTA=" alt="Care with Compassion" class="card-img-top rounded approach-img" />
+            <img src="static/images/gallery/41 Q.jpg" alt="Care with Compassion" class="card-img-top rounded approach-img" />
             <div class="card-body">
               <h4 class="card-title">Care with Compassion</h4>
               <p class="card-text">We provide care with a positive attitude, listen to patients, apologize for mistakes, and take corrective action.</p>
@@ -163,7 +163,7 @@
         <!-- Card 2: Integrity and Excellence -->
         <div class="col-md-4">
           <div class="card border-0 approach-card">
-            <img src="https://img.freepik.com/free-photo/medium-shot-woman-getting-her-eyes-checked_23-2150801430.jpg" alt="Integrity and Excellence" class="card-img-top rounded approach-img" />
+            <img src="static/images/gallery/44 Q.jpg" alt="Integrity and Excellence" class="card-img-top rounded approach-img" />
             <div class="card-body">
               <h4 class="card-title">Integrity and Excellence</h4>
               <p class="card-text">We work as a team to provide comprehensive eye hospital. We act ethically and take responsibility for everything we do.</p>
@@ -174,7 +174,7 @@
         <!-- Card 3: Patient Safety -->
         <div class="col-md-4">
           <div class="card border-0 approach-card">
-            <img src="https://media.istockphoto.com/id/930864180/photo/doctor-and-patient-in-ophthalmology-clinic.jpg?s=612x612&w=0&k=20&c=DKm22bzKnqEjmETFWBtmcfDRaFoyAZAg4p4ywp4Y17M=" alt="Patient Safety" class="card-img-top rounded approach-img" />
+            <img src="static/images/gallery/38 Q.jpg" alt="Patient Safety" class="card-img-top rounded approach-img" />
             <div class="card-body">
               <h4 class="card-title">Patient Safety</h4>
               <p class="card-text">The safety of our patients and their families is our top priority. We implement and monitor NABH standards consistently.</p>
