--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                 <a class="nav-link dropdown-toggle" href="services" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us <i class="icofont-thin-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="dropdown01">
                   <li>
-                    <a class="dropdown-item" href="about">About</a>
+                    <a class="dropdown-item" href="about">About Us</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="managements">Managements</a>
