--- a/templates/index.html
+++ b/templates/index.html
@@ -83,13 +83,13 @@
       <div class="row align-items-center">
         <div class="col-lg-4 col-sm-6">
           <div class="about-img">
-            <img src="https://media.istockphoto.com/id/1189362136/photo/eye-doctor-with-female-patient-during-an-examination-in-modern-clinic.jpg?s=612x612&w=0&k=20&c=jubMfA5uM3Boue5TtzGnBjdpZgo7AD8URPvjwh21KTA=" alt="" class="img-fluid" />
-            <img src="https://media.istockphoto.com/id/1189208254/photo/side-view-shot-of-female-doctor-and-patient-in-ophthalmology-clinic.jpg?s=612x612&w=0&k=20&c=JAn-AoGgm-OzhUTVV4HCsnImH3wpXcsXMa07Sgnr2Co=" alt="" class="img-fluid mt-4" />
+            <img src="static/images/gallery/33 Q.jpg" alt="" class="img-fluid" />
+            <img src="static/images/gallery/30 P.jpg" alt="" class="img-fluid mt-4" />
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
           <div class="about-img mt-4 mt-lg-0">
-            <img src="https://media.istockphoto.com/id/930864180/photo/doctor-and-patient-in-ophthalmology-clinic.jpg?s=612x612&w=0&k=20&c=DKm22bzKnqEjmETFWBtmcfDRaFoyAZAg4p4ywp4Y17M=" alt="" class="img-fluid" />
+            <img src="static/images/gallery/34 Q.jpg" alt="" class="img-fluid" />
           </div>
         </div>
         <div class="col-lg-4">
