--- a/static/css/style.css
+++ b/static/css/style.css
@@ -446,19 +446,37 @@ a:focus {
 }
 
 .bg-1 {
-  background: url("https://devansheyeclinic.com/wp-content/uploads/2022/02/slide03.jpg") no-repeat 50% 50%;
+  background: url("../images/gallery/34 Q.jpg") no-repeat 50% 50%;
   background-size: cover;
   position: relative;
 }
 
+/* static/css/style.css */
 .banner {
   position: relative;
   overflow: hidden;
   background: #fff;
-  background: url("https://devansheyeclinic.com/wp-content/uploads/2022/02/slide03.jpg") no-repeat;
+  background-image: url("../images/gallery/34 Q.jpg"); 
+  background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   min-height: 100vh;
 }
+
+/* static/css/style.css */
+.banner:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  background: #005e7985;
+}
+
 
 .banner .block {
   padding: 80px 0px 160px;
@@ -892,6 +910,7 @@ a:focus {
   padding: 30px;
   margin: 0px 4px;
   margin-bottom: 30px;
+  height: 450px;
 }
 
 .testimonial-block.style-2 .testimonial-thumb {
@@ -1539,4 +1558,11 @@ a:focus {
   width: 100%;
   object-fit: cover;
   object-position: center;
+}
+
+.card-img-top {
+  width: 100%;
+  border-top-left-radius: calc(.25rem - 1px);
+  border-top-right-radius: calc(.25rem - 1px);
+  height: 300px;
 }
