--- a/templates/index.html
+++ b/templates/index.html
@@ -368,39 +368,58 @@
       </div>
     </div>
   
-    <!-- Carousel Section -->
-    <div class="container">
-      <div id="clientCarousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-  
-          <!-- Slide 1 -->
-          <div class="carousel-item active">
-            <div class="row clients-logo justify-content-center">
-              <div class="col-lg-3 col-md-3 col-6">
-                <div class="client-thumb">
-                  <img src="static/images/echs.png" alt="Partner 1" class="img-fluid" />
-                </div>
+<!-- Carousel Section -->
+<div class="container">
+  <div id="clientCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <!-- Slide 1 -->
+      <div class="carousel-item active">
+        <div class="row clients-logo justify-content-center">
+
+          <div class="col-lg-3 col-md-3 col-6">
+            <div class="client-thumb text-center d-flex flex-column align-items-center" style="height: 200px; justify-content: center;">
+              <div style="height: 120px; display: flex; align-items: center; justify-content: center;">
+                <img src="static/images/echs.png" alt="Partner 1" class="img-fluid" style="max-height: 100%; object-fit: contain;" />
               </div>
-              <div class="col-lg-3 col-md-3 col-6">
-                <div class="client-thumb">
-                  <img src="static/images/medisep.png" alt="Partner 2" class="img-fluid" />
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-6">
-                <div class="client-thumb">
-                  <img src="static/images/cghs.png" alt="Partner 3" class="img-fluid" />
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-6">
-                <div class="client-thumb">
-                  <img src="static/images/kasp.png" alt="Partner 4" class="img-fluid" />
-                </div>
-              </div>
+              <div style="background-color: white; color: black; padding: 5px 0; width: 78%; font-weight: 600;">ECHS</div>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-3 col-6">
+            <div class="client-thumb text-center d-flex flex-column align-items-center" style="height: 200px; justify-content: center;">
+              <div style="height: 120px; display: flex; align-items: center; justify-content: center;">
+                <img src="static/images/medisep.png" alt="Partner 2" class="img-fluid" style="max-height: 100%; object-fit: contain;" />
+              </div>
+              <div style="background-color: white; color: black; padding: 5px 0; width: 85%; font-weight: 600;">MEDISEP</div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-3 col-6">
+            <div class="client-thumb text-center d-flex flex-column align-items-center" style="height: 200px; justify-content: center;">
+              <div style="height: 120px; display: flex; align-items: center; justify-content: center;">
+                <img src="static/images/cghs.png" alt="Partner 3" class="img-fluid" style="max-height: 100%; object-fit: contain;" />
+              </div>
+              <div style="background-color: white; color: black; padding: 5px 0; width: 81%; font-weight: 600;">CGHS</div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-3 col-6">
+            <div class="client-thumb text-center d-flex flex-column align-items-center" style="height: 200px; justify-content: center;">
+              <div style="height: 120px; display: flex; align-items: center; justify-content: center;">
+                <img src="static/images/kasp.png" alt="Partner 4" class="img-fluid" style="max-height: 100%; object-fit: contain;" />
+              </div>
+              <div style="background-color: white; color: black; padding: 5px 0; width: 81%; font-weight: 600;">KASP</div>
+            </div>
+          </div>
+
         </div>
       </div>
+
     </div>
-  </section>
-  <!-- End About Us Section -->
+  </div>
+</div>
+<!-- End About Us Section -->
+
+
 {% endblock %}
