--- a/templates/managements.html
+++ b/templates/managements.html
@@ -31,34 +31,45 @@
     </div>
     <div class="row justify-content-center">
       <!-- Card 1 -->
-      <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-4">
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
         <div class="card border-0 shadow rounded text-center w-100">
           <img src="{% static 'images/chairman.png' %}" class="card-img-top img-fluid" alt="Chairman">
           <div class="card-body">
             <h5 class="card-title mb-1">Mr. Tilly B George</h5>
-            <small class="text-muted">Chairman</small>
+            <h4 class="card-title fs-5">Chairman</h4>
           </div>
         </div>
       </div>
 
       <!-- Card 2 -->
-      <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-4">
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
         <div class="card border-0 shadow rounded text-center w-100">
-          <img src="{% static 'images/centreheadd.png' %}" class="card-img-top img-fluid" alt="Centre Head">
+          <img src="{% static 'images/coo.png' %}" class="card-img-top img-fluid" alt="Centre Head">
           <div class="card-body">
-            <h5 class="card-title mb-1">Mr. Suresh Kumar</h5>
-            <small class="text-muted">Centre Head</small>
+            <h5 class="card-title mb-1">Mr. Thomas John</h5>
+            <h4 class="card-title fs-5">Chief Operating Officer</h4>
           </div>
         </div>
       </div>
 
       <!-- Card 3 -->
-      <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-4">
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
+        <div class="card border-0 shadow rounded text-center w-100">
+          <img src="{% static 'images/centreheadd.png' %}" class="card-img-top img-fluid" alt="Centre Head">
+          <div class="card-body">
+            <h5 class="card-title mb-1">Mr. Suresh Kumar</h5>
+            <h4 class="card-title fs-5">Centre Head Kottarakara</h4>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
         <div class="card border-0 shadow rounded text-center w-100">
           <img src="{% static 'images/centrehead.png' %}" class="card-img-top img-fluid" alt="Centre Head">
           <div class="card-body">
             <h5 class="card-title mb-1">Mr. Mukesh Kumar</h5>
-            <small class="text-muted">Centre Head</small>
+            <h4 class="card-title fs-5">Centre Head Pandalam </h4>
           </div>
         </div>
       </div>
