--- a/templates/managements.html
+++ b/templates/managements.html
@@ -5,75 +5,75 @@
 {% endblock %}
 
 {% block content %}
-{% load static %}
+  {% load static %}
 
-<!-- Page Title Section -->
-<section class="page-title bg-1">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block text-left">
-          <span class="text-white">Managements</span>
-          <h1 class="text-capitalize mb-5 text-lg">Managements at Karunya Eye Hospital</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Management Team Section -->
-<section class="management-section py-5 bg-light">
-  <div class="container">
-    <div class="text-center mb-5">
-      <h2 class="title-color">Our Management Team</h2>
-      <p class="text-muted">Meet the dedicated professionals who lead our hospital with care and excellence.</p>
-    </div>
-    <div class="row justify-content-center">
-      <!-- Card 1 -->
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
-        <div class="card border-0 shadow rounded text-center w-100">
-          <img src="{% static 'images/chairman.png' %}" class="card-img-top img-fluid" alt="Chairman">
-          <div class="card-body">
-            <h5 class="card-title mb-1">Mr. Tilly B George</h5>
-            <h4 class="card-title fs-5">Chairman</h4>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 2 -->
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
-        <div class="card border-0 shadow rounded text-center w-100">
-          <img src="{% static 'images/coo.png' %}" class="card-img-top img-fluid" alt="Centre Head">
-          <div class="card-body">
-            <h5 class="card-title mb-1">Mr. Thomas John</h5>
-            <h4 class="card-title fs-5">Chief Operating Officer</h4>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 3 -->
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
-        <div class="card border-0 shadow rounded text-center w-100">
-          <img src="{% static 'images/centreheadd.png' %}" class="card-img-top img-fluid" alt="Centre Head">
-          <div class="card-body">
-            <h5 class="card-title mb-1">Mr. Suresh Kumar</h5>
-            <h4 class="card-title fs-5">Centre Head Kottarakara</h4>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 4 -->
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
-        <div class="card border-0 shadow rounded text-center w-100">
-          <img src="{% static 'images/centrehead.png' %}" class="card-img-top img-fluid" alt="Centre Head">
-          <div class="card-body">
-            <h5 class="card-title mb-1">Mr. Mukesh Kumar</h5>
-            <h4 class="card-title fs-5">Centre Head Pandalam </h4>
+  <!-- Page Title Section -->
+  <section class="page-title bg-1">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="block text-left">
+            <span class="text-white">Managements</span>
+            <h1 class="text-capitalize mb-5 text-lg">Managements at Karunya Eye Hospital</h1>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+
+  <!-- Management Team Section -->
+  <section class="management-section py-5 bg-light">
+    <div class="container">
+      <div class="text-center mb-5">
+        <h2 class="title-color">Our Management Team</h2>
+        <p class="text-muted">Meet the dedicated professionals who lead our hospital with care and excellence.</p>
+      </div>
+      <div class="row justify-content-center">
+        <!-- Card 1 -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
+          <div class="card border-0 shadow rounded text-center w-100">
+            <img src="{% static 'images/chairman.png' %}" class="card-img-top img-fluid" alt="Chairman" />
+            <div class="card-body">
+              <h5 class="card-title mb-1">Mr. Tilly B George</h5>
+              <h4 class="card-title fs-5">Chairman</h4>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
+          <div class="card border-0 shadow rounded text-center w-100">
+            <img src="{% static 'images/coo.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
+            <div class="card-body">
+              <h5 class="card-title mb-1">Mr. Thomas John</h5>
+              <h4 class="card-title fs-5">Chief Operating Officer</h4>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
+          <div class="card border-0 shadow rounded text-center w-100">
+            <img src="{% static 'images/centreheadd.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
+            <div class="card-body">
+              <h5 class="card-title mb-1">Mr. Suresh Kumar</h5>
+              <h4 class="card-title fs-5">Centre Head Kottarakara</h4>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 4 -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
+          <div class="card border-0 shadow rounded text-center w-100">
+            <img src="{% static 'images/centrehead.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
+            <div class="card-body">
+              <h5 class="card-title mb-1">Mr. Mukesh Kumar</h5>
+              <h4 class="card-title fs-5">Centre Head Pandalam</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
