--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
                     <a class="dropdown-item" href="about">About Us</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="managements">Managements</a>
+                    <a class="dropdown-item" href="managements">Management</a>
                   </li>
                 </ul>
               </li>
@@ -85,12 +85,9 @@
                   <li>
                     <a class="dropdown-item" href="insurances">Insurance</a>
                   </li>
-                  <li>
+                  {% comment %} <li>
                     <a class="dropdown-item" href="">Optical Shops</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="">Sister Concerns</a>
-                  </li>
+                  </li> {% endcomment %}
                 </ul>
               </li>
 
