--- a/templates/index.html
+++ b/templates/index.html
@@ -158,8 +158,8 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
-            <div class="icon d-flex align-items-center">
-              <i class="icofont-eye text-lg"></i>
+            <div class="icon d-flex align-items-left">
+              <img src="https://www.shutterstock.com/image-vector/oculist-checks-vision-woman-doctor-600nw-2180041341.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">General Ophthalmology</h4>
             </div>
             <div class="content">
@@ -171,7 +171,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-surgery text-lg"></i>
+              <img src="https://barmaneyecare.com/wp-content/uploads/2023/08/Microincision-Cataract-Surgery-2.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Minimally Invasive Cataract Surgery (MICS)</h4>
             </div>
             <div class="content">
@@ -183,7 +183,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-lens text-lg"></i>
+              <img src="https://media.istockphoto.com/id/1843179090/vector/eye-lens-replacement-surgery-lens-implant-cataract-surgery-intraocular-lenses-iol.jpg?s=612x612&w=0&k=20&c=xw9135zooHqufvJvTLUfDIg61Ihs6o1KP3McDB2gfCU=" style="height: 100px; width: 120px;" alt="">
               <h4 class="mt-3 mb-3">Premium/Multifocal Implants (IOL)</h4>
             </div>
             <div class="content">
@@ -195,7 +195,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-search-1 text-lg"></i>
+              <img src="https://media.istockphoto.com/id/1475583538/vector/dry-eye-problem-abstract-concept-vector-illustration.jpg?s=612x612&w=0&k=20&c=w-S2L_U6v-_njnhntXebitvOFFPipqyG5LlLfh3sWDE=" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Glaucoma Diagnosis & Screening</h4>
             </div>
             <div class="content">
@@ -207,7 +207,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-retina-scan text-lg"></i>
+              <img src="https://www.shutterstock.com/image-vector/eye-ball-vector-retina-closeup-260nw-2277577121.jpg" style="height: 100px; width: 150px;" alt="">
               <h4 class="mt-3 mb-3">Retinal Services</h4>
             </div>
             <div class="content">
@@ -219,11 +219,11 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-eye-alt text-lg"></i>
-              <h4 class="mt-3 mb-3">Corneal Clinic</h4>
+              <img src="https://img.freepik.com/premium-vector/hospital-building-healthcare-cartoon-background-vector-illustration-with-ambulance-car-doctor-patient-nurses-medical-clinic-exterior_2175-1516.jpg" style="height: 100px; width: 100px;" alt="">
+              <h4 class="mt-3 mb-3">Cornial Clinic</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Expert corneal care for infections, injuries, and transplants.</p>
+              <p class="mb-4">Expert cornial care for infections, injuries, and transplants.</p>
             </div>
           </div>
         </div>
