--- a/templates/managements.html
+++ b/templates/managements.html
@@ -14,8 +14,8 @@
       <div class="row">
         <div class="col-md-12">
           <div class="block text-left">
-            <span class="text-white">Managements</span>
-            <h1 class="text-capitalize mb-5 text-lg">Managements at Karunya Eye Hospital</h1>
+            <span class="text-white">Management</span>
+            <h1 class="text-capitalize mb-5 text-lg">Management at Karunya Eye Hospital</h1>
           </div>
         </div>
       </div>
