--- a/templates/specialities.html
+++ b/templates/specialities.html
@@ -36,7 +36,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-left">
-              <i class="icofont-eye text-lg"></i>
+              <img src="https://www.shutterstock.com/image-vector/oculist-checks-vision-woman-doctor-600nw-2180041341.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">General Ophthalmology</h4>
             </div>
             <div class="content">
@@ -48,7 +48,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-surgery text-lg"></i>
+              <img src="https://barmaneyecare.com/wp-content/uploads/2023/08/Microincision-Cataract-Surgery-2.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Minimally Invasive Cataract Surgery (MICS)</h4>
             </div>
             <div class="content">
@@ -60,7 +60,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-lens text-lg"></i>
+              <img src="https://media.istockphoto.com/id/1843179090/vector/eye-lens-replacement-surgery-lens-implant-cataract-surgery-intraocular-lenses-iol.jpg?s=612x612&w=0&k=20&c=xw9135zooHqufvJvTLUfDIg61Ihs6o1KP3McDB2gfCU=" style="height: 100px; width: 120px;" alt="">
               <h4 class="mt-3 mb-3">Premium/Multifocal Implants (IOL)</h4>
             </div>
             <div class="content">
@@ -72,7 +72,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-search-1 text-lg"></i>
+              <img src="https://media.istockphoto.com/id/1475583538/vector/dry-eye-problem-abstract-concept-vector-illustration.jpg?s=612x612&w=0&k=20&c=w-S2L_U6v-_njnhntXebitvOFFPipqyG5LlLfh3sWDE=" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Glaucoma Diagnosis & Screening</h4>
             </div>
             <div class="content">
@@ -84,7 +84,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-retina-scan text-lg"></i>
+              <img src="https://www.shutterstock.com/image-vector/eye-ball-vector-retina-closeup-260nw-2277577121.jpg" style="height: 100px; width: 150px;" alt="">
               <h4 class="mt-3 mb-3">Retinal Services</h4>
             </div>
             <div class="content">
@@ -96,7 +96,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-eye-alt text-lg"></i>
+              <img src="https://img.freepik.com/premium-vector/hospital-building-healthcare-cartoon-background-vector-illustration-with-ambulance-car-doctor-patient-nurses-medical-clinic-exterior_2175-1516.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Cornial Clinic</h4>
             </div>
             <div class="content">
@@ -104,10 +104,11 @@
             </div>
           </div>
         </div>
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-eye text-lg"></i>
+              <img src="https://www.shutterstock.com/image-vector/diabetic-retinopathy-anatomy-healthy-eyeball-600nw-2509468793.jpg" style="height: 100px; width: 150px;" alt="">
               <h4 class="mt-3 mb-3">Diabetic Retinopathy Screening</h4>
             </div>
             <div class="content">
@@ -119,7 +120,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-surgery text-lg"></i>
+              <img src="https://thumbs.dreamstime.com/b/diabetes-related-retinopathy-diabetic-retinopathy-anatomical-poster-human-eye-disease-vision-loss-blindness-damaged-blood-337325929.jpg" style="height: 100px; width: 150px;" alt="">
               <h4 class="mt-3 mb-3">Hypertensive Retinopathy Screening</h4>
             </div>
             <div class="content">
@@ -131,7 +132,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-lens text-lg"></i>
+              <img src="https://media.istockphoto.com/id/490313946/vector/glaucoma.jpg?s=612x612&w=0&k=20&c=GBJyx9C-DCLnwxg3kIQA12fH5a7nOPi7kaylv6shux4=" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Glaucoma Diagnosis & Screening</h4>
             </div>
             <div class="content">
@@ -143,19 +144,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-search-1 text-lg"></i>
-              <h4 class="mt-3 mb-3">Glaucoma Diagnosis & Screening</h4>
-            </div>
-            <div class="content">
-              <p class="mb-4">Early detection and management of glaucoma to prevent vision loss.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 col-sm-6">
-          <div class="service-item mb-4">
-            <div class="icon d-flex align-items-center">
-              <i class="icofont-retina-scan text-lg"></i>
+              <img src="static/images/laser.png" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Laser Treatments (Yag, Green, PRP & Barrage)</h4>
             </div>
             <div class="content">
@@ -167,7 +156,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-eye-alt text-lg"></i>
+              <img src="https://www.shutterstock.com/image-vector/oculist-checks-vision-woman-doctor-600nw-2180041341.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Optical Coherence Tomography (OCT)</h4>
             </div>
             <div class="content">
@@ -178,7 +167,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-eye text-lg"></i>
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAxEwppKyVlda1p1GOeViNkaxCR1eFjeo8Xd9xVGVoC1cvCx95LkN0uJsklHnv75_Ah78&usqp=CAU" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Humphrey Field Analyzer (HFA)</h4>
             </div>
             <div class="content">
@@ -190,7 +179,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-surgery text-lg"></i>
+              <img src="https://thumbs.dreamstime.com/b/neurologist-concept-arab-female-doctor-examine-human-brain-anatomy-biology-neurology-neuroscience-vector-neurologist-350390711.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Neurological Field Test</h4>
             </div>
             <div class="content">
@@ -202,7 +191,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-lens text-lg"></i>
+              <img src="https://insighteye2020.com/wp-content/uploads/59_08.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Zeiss IOL Master 700 for accurate IOL Calculation</h4>
             </div>
             <div class="content">
@@ -214,7 +203,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-search-1 text-lg"></i>
+              <img src="https://jirehdesign.com/wp-content/uploads/2015/05/suvr0088.jpg" style="height: 100px; width: 150px;" alt="">
               <h4 class="mt-3 mb-3">Intravitreal Injection</h4>
             </div>
             <div class="content">
@@ -226,7 +215,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-retina-scan text-lg"></i>
+              <img src="https://indianpsu.com/wp-content/uploads/2022/06/IMG-20220609-WA0087-512x470.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Central Government Health Scheme (CGHS)</h4>
             </div>
             <div class="content">
@@ -238,8 +227,8 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-eye-alt text-lg"></i>
-              <h4 class="mt-3 mb-3">Corneal Clinic</h4>
+              <img src="https://greenworldin.com/admin/uploads/image/fhh.png" style="height: 100px; width: 100px;" alt="">
+              <h4 class="mt-3 mb-3">ECHS</h4>
             </div>
             <div class="content">
               <p class="mb-4">ECHS (Ex-Servicemen Contributory Health Scheme-Govt)</p>
@@ -249,7 +238,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-lens text-lg"></i>
+              <img src="static/images/medisep.png" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">MEDISEP (Medical Insurance Scheme for State Employees & Pensioners-Govt)</h4>
             </div>
             <div class="content">
@@ -261,7 +250,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-search-1 text-lg"></i>
+              <img src="https://bsmedia.business-standard.com/_media/bs/img/article/2022-08/24/full/1661335479-2031.png" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">AB-PMJAY/KASP Services (Govt)</h4>
             </div>
             <div class="content">
@@ -273,7 +262,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-retina-scan text-lg"></i>
+              <img src="https://www.hdfcergo.com/images/default-source/default-album/shutterstock_1402247972d55f6f27c4564790957b0f0d1f82e7a5.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Private Health Insurance/TPAs Services (For Cashless/Reimbursement) Contact Lens Clinic</h4>
             </div>
             <div class="content">
@@ -285,7 +274,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
-              <i class="icofont-eye-alt text-lg"></i>
+              <img src="https://www.shutterstock.com/image-vector/oculist-checks-vision-woman-doctor-600nw-2180041341.jpg" style="height: 100px; width: 100px;" alt="">
               <h4 class="mt-3 mb-3">Premium & Branded Hi-Tech Optical Section (Insight Galleria).</h4>
             </div>
             <div class="content">
