--- a/templates/managements.html
+++ b/templates/managements.html
@@ -44,7 +44,7 @@
         <!-- Card 2 -->
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
           <div class="card border-0 shadow rounded text-center w-100">
-            <img src="{% static 'images/coo.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
+            <img src="{% static 'images/thomas.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
             <div class="card-body">
               <h5 class="card-title mb-1">Mr. Thomas John</h5>
               <h4 class="card-title fs-5">Chief Operating Officer</h4>
